# fdtd

./: .gitignore  Cargo.toml  README.md
cem-app/: Cargo.toml  build.rs
cem-app/src/: app.rs  args.rs  clipboard.rs  config.rs  debug.rs  error.rs  files.rs  main.rs  menubar.rs
cem-app/src/app/: clipboard.rs  config.rs  debug.rs  error_dialog.rs  files.rs  mod.rs  start.rs
cem-app/src/app/composer/: mod.rs
cem-app/src/app/solver/: config.rs  observer.rs  runner.rs  ui.rs
cem-app/src/assets/: mod.rs  plugin.rs
cem-app/src/composer/: camera.rs  entity.rs  entity_window.rs  loader.rs  menubar.rs  mod.rs  presets.rs  selection.rs  tree.rs  undo.rs  view.rs
cem-app/src/composer/file_formats/: mod.rs  nec.rs  obj.rs  project_file.rs
cem-app/src/composer/loader/: mod.rs
cem-app/src/composer/properties/: nalgebra.rs  palette.rs  std.rs
cem-app/src/composer/renderer/: camera.rs  command.rs  draw_commands.rs  light.rs  material.rs  mesh.rs  mod.rs  resource.rs  texture_channel.rs
cem-app/src/composer/scene/: components.rs  mod.rs  serialize.rs  spatial.rs  transform.rs  ui.rs  undo.rs
cem-app/src/composer/shape/: flat.rs  mod.rs  platonic_solids.rs
cem-app/src/fdtd/: executor.rs  mod.rs
cem-app/src/file_formats/nec/: parser.rs
cem-app/src/geometry/: mod.rs
cem-app/src/geometry/simplex/: volume_mesh.rs
cem-app/src/renderer/: camera.rs  command.rs  components.rs  draw_commands.rs  light.rs  material.rs  mesh.rs  mesh.wgsl  mod.rs  plugin.rs  renderer.rs  resource.rs  state.rs  systems.rs  texture_channel.rs
cem-app/src/scene/: components.rs  mod.rs  resources.rs  serialize.rs  spatial.rs  transform.rs
cem-app/src/solver/: config.rs  mod.rs  observer.rs  runner.rs  ui.rs
cem-app/src/util/: egui.rs  mod.rs  scene.rs
cem-probe/: Cargo.toml
cem-probe/src/: lib.rs  nalgebra.rs  palette.rs  std.rs
cem-render/: Cargo.toml
cem-render/src/: camera.rs  command.rs  components.rs  draw_commands.rs  lib.rs  light.rs  material.rs  plugin.rs  renderer.rs  resource.rs  shader.wgsl  state.rs  systems.rs
cem-render/src/mesh/: mod.rs  parry.rs
cem-render/src/pipeline/: mesh.rs  mod.rs
cem-render/src/texture/: cache.rs  channel.rs  mipmap_cache.rs  mod.rs
cem-scene/: Cargo.toml
cem-scene/src/: async_commands.rs  label.rs  lib.rs  plugin.rs  probe.rs  serde.rs
cem-scene/src/assets/: mod.rs  plugin.rs  systems.rs
cem-scene/src/spatial/: bvh.rs  collider.rs  mod.rs  queries.rs  systems.rs  traits.rs
cem-scene/src/transform/: global.rs  local.rs  mod.rs  systems.rs
cem-solver/: Cargo.toml
cem-solver/src/: lib.rs  material.rs  probe.rs  project.rs  source.rs
cem-solver/src/fdtd/: mod.rs  pml.rs  strider.rs  util.rs
cem-solver/src/fdtd/cpu/: lattice.rs  mod.rs  project.rs  util.rs
cem-solver/src/fdtd/wgpu/: mod.rs  project.rs  project.wgsl  update.wgsl
cem-solver/src/feec/: mod.rs
cem-solver/src/feec/cpu/: mod.rs
cem-solver/src/feec/simplex/: half_edge.rs
cem-util/: Cargo.toml
cem-util/src/: boo.rs  cache.rs  exclusive.rs  io.rs  lib.rs  palette.rs  path.rs  serde.rs
cem-util/src/egui/: mod.rs
cem-util/src/wgpu/: image.rs  mod.rs
cem-util/src/wgpu/buffer/: staged.rs  typed.rs
cem-util/src/wgpu/buffer/staging/: write.rs
fdtd-app/: Cargo.toml  build.rs
fdtd-app/src/: build_info.rs  main.rs
fdtd-app/src/app/: args.rs  config.rs  menubar.rs  mod.rs  start.rs
fdtd-app/src/app/composer/: menubar.rs  mod.rs  tree.rs  view.rs
fdtd-app/src/app/composer/loader/: mod.rs
fdtd-app/src/app/composer/properties/: nalgebra.rs  palette.rs  std.rs
fdtd-app/src/app/composer/renderer/: camera.rs  command.rs  draw_commands.rs  light.rs  material.rs  mesh.rs  mesh.wgsl  mod.rs  resource.rs
fdtd-app/src/app/composer/renderer/material/: mod.rs
fdtd-app/src/app/composer/renderer/pipeline/: clear.rs  mesh.rs
fdtd-app/src/app/composer/scene/: buffer.rs  components.rs  mod.rs  serialize.rs  spatial.rs  transform.rs  ui.rs  undo.rs
fdtd-app/src/app/solver/: config.rs  mod.rs  observer.rs  project.rs  runner.rs  ui.rs
fdtd-app/src/app/solver/fdtd/: mod.rs  pml.rs  util.rs
fdtd-app/src/app/solver/fdtd/cpu/: lattice.rs  mod.rs  project.rs  util.rs
fdtd-app/src/app/solver/fdtd/wgpu/: mod.rs  project.rs  project.wgsl
fdtd-app/src/fdtd/: mod.rs
fdtd-app/src/feec/: mod.rs
fdtd-app/src/file_formats/: mod.rs
fdtd-app/src/file_formats/nec/: mod.rs
fdtd-app/src/geometry/simplex/: mod.rs
fdtd-app/src/physics/: material.rs
fdtd-app/src/util/: egui.rs  mod.rs  oneshot.rs
fdtd-app/src/util/arena/: monotonic.rs
fdtd-app/src/util/serde/: mod.rs
fdtd-app/src/util/wgpu/: mod.rs
fdtd-app/src/util/wgpu/buffer/: mod.rs  staged.rs  typed.rs
fdtd-app/src/util/wgpu/buffer/staging/: mod.rs  write.rs  write_belt.rs
fdtd-build/: Cargo.toml
fdtd-build/src/: lib.rs  materials.rs
nec-file/: Cargo.toml
nec-file/examples/: read_file.rs
nec-file/src/: interpreter.rs  lib.rs  parser.rs
src/: boundary_condition.rs  executor.rs  geometry.rs  grid.rs  lattice.rs  main.rs  material.rs  simulation.rs  source.rs  util.rs
src/app/: args.rs  clipboard.rs  config.rs  files.rs  menubar.rs  mod.rs  solver.rs  start.rs
src/app/composer/: menubar.rs  mod.rs  solver.rs  tree.rs  view.rs
src/app/solver/: config.rs  maxwell.rs  mod.rs  observer.rs  project.rs  runner.rs  source.rs  traits.rs  ui.rs  util.rs
src/composer/: collisions.rs  debug.rs  mod.rs  scene.rs  view.rs
src/composer/renderer/: camera.rs  draw_commands.rs  grid.rs  mesh.rs  mod.rs
src/composer/scene/: mod.rs  view.rs
src/fdtd/: executor.rs  fdtd.wgsl  geometry.rs  lattice.rs  material.rs  mod.rs  pml.rs  simulation.rs  util.rs  wgpu.rs
src/feec/: half_edge.rs  mod.rs  platonic_solids.rs
src/file_formats/: mod.rs  nec.rs  obj.rs
src/file_formats/nec/: card.rs  interpreter.rs  mod.rs  parser.rs
src/geometry/: mod.rs  scene.rs
src/geometry/simplex/: half_edge.rs
src/physics/: material.rs  mod.rs
src/ui/: mod.rs
src/ui/shaders/: clear.wgsl  solid.wgsl
src/util/: egui.rs  mod.rs  wgpu.rs
src/util/arena/: generational.rs  mod.rs  monotonic.rs
(+83 files in other folders)
