[workspace]
resolver = "2"
members = ["cem-solver", "cem-util", "cem-app", "nec-file"]

[patch.crates-io]
eframe = { git = "https://github.com/jgraef/egui.git", branch = "switch/wgpu-stencil-buffer" }
egui = { git = "https://github.com/jgraef/egui.git", branch = "switch/wgpu-stencil-buffer" }
egui-wgpu = { git = "https://github.com/jgraef/egui.git", branch = "switch/wgpu-stencil-buffer" }
egui-winit = { git = "https://github.com/jgraef/egui.git", branch = "switch/wgpu-stencil-buffer" }
emath = { git = "https://github.com/jgraef/egui.git", branch = "switch/wgpu-stencil-buffer" }

[workspace.dependencies]
cem-solver = { path = "cem-solver" }
cem-util = { path = "cem-util" }
nec-file = { path = "nec-file" }
