[package]
name = "cem-scene"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { version = "0.17.3", default-features = false, features = [
    "backtrace",
    "bevy_reflect",
    "std",
    "trace",
    "track_location",
    "reflect_auto_register",
] }
bevy_reflect = "0.17.3"
bevy_tasks = { version = "0.17.3", default-features = false }
bevy_utils = { version = "0.17.3", default-features = false }
cem-probe = { workspace = true, optional = true }
cem-util = { workspace = true, features = ["serde"], optional = true }
derive_more = { version = "2.0.1", features = ["debug"] }
egui = { version = "0.33.2", default-features = false, optional = true }
nalgebra = "0.34.1"
num-traits = "0.2.19"
parry3d = { version = "0.25.3", default-features = false, features = [
    "dim3",
    "f32",
    "std",
] }
serde = { version = "1.0.228", features = ["derive"], optional = true }
thiserror = "2.0.17"
tracing = "0.1.43"

[features]
default = []
full = ["serde", "probe"]
serde = [
    "dep:serde",
    "parry3d/serde-serialize",
    "bevy_ecs/serialize",
    "nalgebra/serde-serialize",
    "dep:cem-util",
]
probe = ["dep:cem-probe", "dep:egui"]
