[package]
name = "cem-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
bytemuck = { version = "1.24.0", optional = true }
cem-util = { workspace = true }
derive_more = { version = "2.0.1", features = ["debug"] }
image = "0.25.9"
nalgebra = "0.34.1"
num = "0.4.3"
palette = "0.7.6"
parking_lot = "0.12.5"
rayon = { version = "1.11.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1.43"
wgpu = { version = "27.0.1", optional = true }

[features]
default = ["full"]
full = ["rayon", "wgpu"]
rayon = ["dep:rayon"]
wgpu = ["dep:wgpu", "cem-util/wgpu", "dep:bytemuck", "nalgebra/bytemuck"]
