[package]
name = "cem-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
bevy_ecs = { version = "0.17.3", default-features = false, optional = true }
bevy_reflect = { version = "0.17.3", default-features = false, optional = true }
bytemuck = { version = "1.24.0", optional = true }
cem-util = { workspace = true }
cem-probe = { workspace = true, optional = true, features = ["nalgebra"] }
cem-scene = { workspace = true, optional = true }
derive_more = { version = "2.0.1", features = ["debug"] }
egui = { version = "0.33.2", default-features = false, optional = true }
image = "0.25.9"
nalgebra = "0.34.1"
num = "0.4.3"
palette = "0.7.6"
parking_lot = "0.12.5"
rayon = { version = "1.11.0", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
thiserror = "2.0.17"
tracing = "0.1.43"
wgpu = { version = "27.0.1", optional = true }

[features]
default = []
full = ["rayon", "wgpu", "bevy_ecs", "probe", "serde"]
rayon = ["dep:rayon"]
wgpu = ["dep:wgpu", "cem-util/wgpu", "dep:bytemuck", "nalgebra/bytemuck"]
bevy_ecs = ["dep:bevy_ecs", "dep:bevy_reflect", "dep:cem-scene"]
probe = ["dep:cem-probe", "dep:egui", "cem-scene/probe"]
serde = ["dep:serde", "nalgebra/serde-serialize"]
