[package]
name = "cem-util"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
directories = "6.0.0"
egui = { version = "0.33.2", default-features = false, optional = true }
egui-file-dialog = { version = "0.12.0", default-features = false, optional = true }
humansize = "2.1.3"
image = { version = "0.25.9", default-features = false, optional = true }
nalgebra = { version = "0.34.1", optional = true }
palette = { version = "0.7.6", optional = true }
parking_lot = "0.12.5"
thiserror = "2.0.17"
tracing = "0.1.43"
wgpu = { version = "27.0.1", default-features = false, optional = true }

[features]
default = []
wgpu = ["dep:wgpu", "nalgebra", "palette"]
image = ["dep:image"]
egui = ["dep:egui", "dep:egui-file-dialog"]
nalgebra = ["dep:nalgebra"]
palette = ["dep:palette"]
