[package]
name = "fdtd"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/jgraef/fdtd"

[dependencies]
arrayvec = "0.7.6"
base64 = "0.22.1"
bitflags = { version = "2.10.0", features = ["bytemuck", "serde"] }
bytemuck = "1.24.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
color-eyre = "0.6.5"
colorgrad = { version = "0.8.0", features = ["preset"] }
derive_more = { version = "2.0.1", features = ["debug"] }
directories = "6.0.0"
dotenvy = "0.15.7"
eframe = { version = "0.33.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wayland",
    "x11",
    "wgpu",
    "persistence",
] }
egui = { version = "0.33.0", features = ["persistence"] }
egui-file-dialog = "0.12.0"
egui-wgpu = { version = "0.33.0", features = ["default"] }
egui_ltreeview = { version = "0.6.0", features = ["persistence"] }
egui_plot = "0.34.0"
either = "1.15.0"
erased-serde = "0.4.9"
hecs = { version = "0.10.5", features = ["macros", "serde", "row-serialize"] }
humansize = "2.1.3"
image = "0.25.8"
lipsum = "0.9.1"
lz4_flex = "0.12.0"
nalgebra = { version = "0.34.1", features = ["bytemuck", "serde-serialize"] }
num = "0.4.3"
palette = { version = "0.7.6", features = ["named", "bytemuck", "serializing"] }
parking_lot = "0.12.5"
parry3d = { version = "0.25.2", features = ["serde-serialize"] }
pbr-presets = { git = "https://github.com/jgraef/pbr-presets.git", version = "0.1.0" }
pollster = "0.4.0"
rayon = { version = "1.11.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smallvec = "1.15.1"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
tobj = "4.0.3"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
wgpu = { version = "27.0.1", features = ["serde"] }

[features]
default = ["full"]
full = ["rayon"]
rayon = ["dep:rayon"]
